--- a/package.json
+++ b/package.json
@@ -5,32 +5,48 @@
   "scripts": {
     "test": "jest",
     "serve": "parcel server src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "lint": "tslint -p tsconfig.json",
+    "check-build": "tsc -p tsconfig.json --pretty"
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/babylonjs": "^2.4.1",
+    "@types/cannon": "^0.1.3",
     "@types/chai": "^4.1.7",
+    "@types/combokeys": "^2.4.6",
     "@types/debug": "^0.0.31",
-    "@types/jest": "^23.3.13",
+    "@types/inversify": "^2.0.33",
+    "@types/inversify-binding-decorators": "^2.0.0",
+    "@types/jest": ">=22.0.0 <24.0.0",
+    "@types/lodash": "^4.14.120",
+    "@types/ramda": "types/npm-ramda",
     "chai": "^4.2.0",
     "config-presets": "^1.0.3",
     "debug": "^4.1.1",
     "husky": "^1.3.1",
-    "jest": "^24.0.0",
+    "jest": ">=22.0.0 <24.0.0",
+    "jest-extended": "^0.11.1",
     "lint-staged": "^8.1.0",
     "ls": "^0.2.1",
     "parcel": "^1.11.0",
+    "parcel-plugin-static-files-copy": "^2.0.0",
     "prettier": "^1.16.1",
     "prettier-package-json": "^2.0.1",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.2.4"
+    "typescript": "^3.2.4",
+    "utility-types": "^3.4.1"
   },
   "dependencies": {
-    "babylonjs": "^3.3.0",
-    "babylonjs-gui": "^3.3.0"
+    "babylonjs": "^4.0.0-alpha.22",
+    "babylonjs-gui": "^3.3.0",
+    "cannon": "^0.6.2",
+    "combokeys": "^3.0.0",
+    "inversify": "^5.0.1",
+    "inversify-binding-decorators": "^4.0.0",
+    "lodash": "^4.17.11",
+    "ramda": "^0.26.1"
   }
 }
