--- a/package.json
+++ b/package.json
@@ -1,22 +1,35 @@
 {
   "name": "projects",
+  "license": "MIT",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "serve": "parcel server src/index.html",
     "build": "parcel build src/index.html",
+    "check-build": "tsc -p tsconfig.json --pretty",
     "lint": "tslint -p tsconfig.json",
-    "check-build": "tsc -p tsconfig.json --pretty"
+    "serve": "parcel server src/index.html",
+    "test": "jest"
   },
-  "license": "MIT",
+  "dependencies": {
+    "assert": "^1.4.1",
+    "babylon": "^7.0.0-beta.47",
+    "babylonjs": ">=3.3.0-rc.4",
+    "babylonjs-gui": "^3.3.0",
+    "babylonjs-loaders": "^4.0.0-alpha.27",
+    "cannon": "^0.6.2",
+    "combokeys": "^3.0.0",
+    "inversify": "^5.0.1",
+    "inversify-binding-decorators": "^4.0.0",
+    "lodash": "^4.17.11",
+    "ramda": "^0.26.1",
+    "reflect-metadata": "^0.1.13"
+  },
   "devDependencies": {
+    "@types/assert": "^1.4.2",
     "@types/cannon": "^0.1.3",
     "@types/chai": "^4.1.7",
     "@types/combokeys": "^2.4.6",
     "@types/debug": "^0.0.31",
-    "@types/inversify": "^2.0.33",
-    "@types/inversify-binding-decorators": "^2.0.0",
     "@types/jest": ">=22.0.0 <24.0.0",
     "@types/lodash": "^4.14.120",
     "@types/ramda": "types/npm-ramda",
@@ -38,15 +51,5 @@
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.2.4",
     "utility-types": "^3.4.1"
-  },
-  "dependencies": {
-    "babylonjs": "^4.0.0-alpha.22",
-    "babylonjs-gui": "^3.3.0",
-    "cannon": "^0.6.2",
-    "combokeys": "^3.0.0",
-    "inversify": "^5.0.1",
-    "inversify-binding-decorators": "^4.0.0",
-    "lodash": "^4.17.11",
-    "ramda": "^0.26.1"
   }
 }
