--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "assert": "^1.4.1",
     "babylonjs": ">=3.3.0-rc.4",
     "babylonjs-gui": "^3.3.0",
     "babylonjs-loaders": "^4.0.0-alpha.27",
+    "bluebird": "^3.5.3",
     "cannon": "^0.6.2",
     "combokeys": "^3.0.0",
     "inversify": "^5.0.1",
@@ -24,7 +24,7 @@
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@types/assert": "^1.4.2",
+    "@types/bluebird": "^3.5.25",
     "@types/cannon": "^0.1.3",
     "@types/chai": "^4.1.7",
     "@types/combokeys": "^2.4.6",
